Starting to get the hang of the GJS system (#165).

--- a/playpen/cef-message.html
+++ b/playpen/cef-message.html
@@ -266,20 +266,21 @@ $(document).ready(function() {
     });
     $('#play').on('click', async function() {
         let csound_ = await get_csound(csound_message_callback);
-        await csound_.CreateMessageBuffer(1);
+        await csound_.CreateMessageBuffer(0);
         document.getElementById("csound_console").value = "";
         var csd = document.getElementById('csd').value;
-        let interval_callback = function() {
-            let n = 80; //csound_.GetMessageCnt();
+        let interval_callback = async function() {
+            let n = await csound_.GetMessageCnt();
             console.log("n: " + n + "\n");
             for (let i = 0; i < n; i++) {
-                let message = csound_.GetFirstMessage();
+                let message = await csound_.GetFirstMessage();
                 csound_message_callback(message);
-                csound_.PopFirstMessage();
+                await csound_.PopFirstMessage();
             }
         };
-        setInterval(interval_callback, 250);
-        csound_.CompileCsdTextAndPerform(csd);
+        console.log("GetMessageCnt: " + csound.GetMessageCnt());
+        window.timer = setInterval(interval_callback, 250);
+        csound_.Render(csd);
         $('#restore').trigger('click');
     });
     $('#stop').on('click', async function() {
@@ -287,6 +288,7 @@ $(document).ready(function() {
         await csound_.Stop();
         await csound_.Cleanup();
         csound_.Reset();
+        clearInterval(window.timer);
     });
     $('#save').on('click', function() {
         $('.persistent-element').each(function() {
